--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,5 @@
 ---
-service: serverless-react-boilerplate
+service: chesser-serverless-test
 frameworkVersion: "3"
 useDotenv: true
 variablesResolutionMode: 20210326
@@ -8,7 +8,7 @@ disabledDeprecations:
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs18.x
   region: ${opt:region, 'us-east-1'}
   stage: ${opt:stage, 'dev'}
   memorySize: 512
